<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_room_bg"
    android:paddingStart="18dp"
    android:paddingTop="26dp"
    android:paddingEnd="18dp"
    android:paddingBottom="16dp"
    tools:context=".activity.FamilyCreateJoinActivity">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_family"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <!-- Create Family Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCreateFamily"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_circular"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/add_symbol"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCreateFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/create_new_family"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Shine View -->
        <View
            android:id="@+id/shine"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_shine"
            android:rotation="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Join Other Family -->
    <TextView
        android:id="@+id/tvJoinOtherFamily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/join_other_family"
        android:textColor="@color/colorGrayhint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCreateFamily" />

    <!-- Family ID Input -->
    <EditText
        android:id="@+id/etFamilyId"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_light_gray"
        android:gravity="center_vertical"
        android:hint="@string/family_id_hint"
        android:inputType="number"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGrayhint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJoinOtherFamily" />

    <!-- Search Button -->
    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="-1dp"
        android:background="@drawable/btn_light_gray"
        android:contentDescription="@string/search"
        android:padding="16dp"
        android:src="@drawable/new_search"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/etFamilyId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etFamilyId" />

</androidx.constraintlayout.widget.ConstraintLayout>
