<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_room_bg"
    android:paddingHorizontal="18dp"
    android:paddingTop="26dp"
    android:paddingBottom="16dp"
    tools:context=".activity.UpdateProfileActivity">

    <!-- Back -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <!-- Scroll Area -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg"
                android:clickable="true"
                android:contentDescription="@string/update_profile_image"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/status_add" />

            <!-- Full Name -->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:baselineAligned="true"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Gender Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_gender"
                    android:inputType="none"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nationality Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/etNationality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_nationality"
                    android:inputType="none"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Bio -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYourBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_enter_your_bio"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:minLines="2"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Update Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#29B6F6"
                android:text="@string/update_profile"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
