<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_room_bg"
    android:paddingHorizontal="18dp"
    android:paddingTop="26dp"
    android:paddingBottom="16dp"
    tools:context=".activity.CreateFamilyActivity">

    <!-- Back -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_family"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg"
                android:clickable="true"
                android:contentDescription="@string/add_family_image"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/status_add" />

            <!-- Family Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_family_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Family Bio -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_family_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family_name_bio"
                    android:imeOptions="actionDone"
                    android:maxLength="100"
                    android:minLines="2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Create Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_room"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#29B6F6"
                android:text="@string/create_family"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                app:cornerRadius="8dp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
